--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,6 +6,8 @@ html(lang="ru")
 		link(rel="stylesheet" href="./css/style.min.css")
 		title RM
 	body
-		.red Ruby
+		.red Rubdfgsdgdff
 		img(src='./img/AAAA.jpg')
 		script(src="./js/index.js")
+		include ./header.pug
+
